# MAW

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY_ADAPTER_SPIKE_REPORT.md  CONTEXT_AWARE_COUNCIL_REFACTOR_PLAN.md  CONTEXT_RELEASE_HARDENING_PLAN.md  FINAL_SPEC.md  LOCAL_AGENT_ARCHITECTURE_PLAN.md  MAW.command  OPTIMIZATION_PLAN.md  PLAN_REVIEW_APPENDIX.md  README.md  V2_CUTOVER_EXECUTION_PLAN_FOR_OPENWORK.md  V2_CUTOVER_PLAN_FOR_GROK_BUILD.md  V2_CUTOVER_PLAN_REVIEW_FOR_AGENTS.md  V2_IMPLEMENTATION_AUDIT.md  WATCHER_FIRST_SYNTHESIS.md  context_smoke_test.py  explorer.py  export.py  install.command  loop_orchestrator.py  main.py  maw_paths.py  project_context.py  pyproject.toml  scout.py  setup_api.py  smoke_test.py  start.sh  test_adapters.py  test_context_api.py  test_council.py  test_direct_resolver.py  test_e2e_workflow.py  test_explorer.py  test_export.py  test_llm_provider.py  test_openrouter.py  test_orchestrator.py  (+6 more)
.opencode/: openwork.json
adapters/: installer.py  registry.json
council/: __init__.py  config.py  council.py  direct_resolver.py  llm_provider.py  openrouter.py  storage.py  vendors.json
docs/: CONTEXT_GOVERNANCE.md  PHASE7_UI_CHECKLIST.md
docs/archive-v1/: CONTEXT_AWARE_COUNCIL_REFACTOR_PLAN.md  FINAL_SPEC.md  (+3 more)
static/: index.html  ws-manager.js
template_target_project/: .gitignore
v2/: app.py  dispatcher.py  files.py  git_ops.py  run_spike.py  schema.py  watcher.py  workflow.py
v2_templates/: AGENTS.md  TEAM_RULES.md
v2_tests/: test_cutover.py  test_dispatcher.py  test_e2e.py  test_gate.py  test_schema.py  test_workflow.py
(+11 files in other folders)
